--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^10.0.27",
     "acorn": "^6.4.2",
-    "gatsby": "^2.19.45",
+    "axios": "^0.21.1",
+    "gatsby": "^2.29.3",
     "gatsby-image": "^2.3.2",
     "gatsby-plugin-emotion": "^4.2.1",
     "gatsby-plugin-manifest": "^2.3.3",
@@ -31,9 +34,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
-    "typography": "^0.16.19",
-    "typography-theme-twin-peaks": "^0.16.19"
+    "react-typography": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
