--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "gatsby-plugin-emotion": "^4.2.1",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.2.1",
+    "gatsby-plugin-react-helmet-async": "^1.1.1",
     "gatsby-plugin-sharp": "^2.5.4",
     "gatsby-plugin-typography": "^2.4.1",
     "gatsby-source-filesystem": "^2.2.2",
@@ -33,7 +33,7 @@
     "gatsby-transformer-sharp": "^2.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
+    "react-helmet-async": "^1.0.7",
     "react-typography": "^0.16.19"
   },
   "devDependencies": {
